Web service client is now functional.